--- a/demo/miniprogram/pages/index/index.wxml
+++ b/demo/miniprogram/pages/index/index.wxml
@@ -1,6 +1,7 @@
-<view>
+<view class="page-body">
 	<navigator url="/pages/xp2p-demo-1vN/demo?mode=ipc" hover-class="navigator-hover">跳转到 X-P2P Demo IPC</navigator>
 	<navigator url="/pages/xp2p-demo-1vN/demo?mode=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-xntp</navigator>
 	<navigator url="/pages/xp2p-demo-1vN/demo?mode=tcp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-tcp</navigator>
+	<navigator url="/pages/xp2p-multiplayers/demo?cfg1=ipc&cfg2=xntp&mode=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo IPC+XNTP 多播放器</navigator>
 </view>
 
