--- a/demo/miniprogram/pages/index/index.wxml
+++ b/demo/miniprogram/pages/index/index.wxml
@@ -1,14 +1,36 @@
 <view class="page-body">
+  <view class="page-section page-section-gap">
+    <view class="group-button-area">
+      <button bindtap="initModule" class="group-button" type="primary" size="mini" disabled="{{!!state}}">
+        initModule
+      </button>
+      <button bindtap="destroyModule" class="group-button" type="primary" size="mini" disabled="{{!state}}">
+        destroyModule
+      </button>
+      <button bindtap="resetP2P" class="group-button" type="primary" size="mini" disabled="{{!state}}">
+        resetP2P
+      </button>
+    </view>
+    <view bindtap="printData">moduleState: {{state}}</view>
+    <view>localPeername: {{localPeername}}</view>
+  </view>
   <view class="page-section">
-    <button wx:for="{{listBtn}}" wx:key="cfg" type="primary" class="page-body-button" bindtap="gotoDemoPage" data-cfg="{{item.cfg}}">{{item.productId}}/{{item.deviceName}}</button>
+    <button wx:for="{{listBtn}}" wx:key="cfg" type="primary" class="page-body-button"
+      bindtap="gotoDemoPage"
+      data-url="/pages/xp2p-demo-1vN/demo?mode={{item.cfg}}&reserve={{item.reserve?1:0}}"
+    >
+      {{item.productId}}/{{item.deviceName}}{{item.reserve?' (rsv)':''}}
+    </button>
   </view>
   <view class="page-section">
     <view wx:for="{{listNav}}" wx:key="cfg">
-      <navigator url="/pages/xp2p-demo-1vN/demo?mode={{item.cfg}}" hover-class="navigator-hover">跳转到 X-P2P 1v1 {{item.cfg}}</navigator>
+      <navigator url="/pages/xp2p-demo-1vN/demo?mode={{item.cfg}}&reserve={{item.reserve?1:0}}" hover-class="navigator-hover">
+        跳转到 X-P2P 1v1 {{item.cfg}}{{item.reserve?'-reserve':''}}
+      </navigator>
     </view>
   </view>
-	<navigator url="/pages/xp2p-demo-1vN/demo?mode=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-xntp</navigator>
-	<navigator url="/pages/xp2p-demo-1vN/demo?mode=tcp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-tcp</navigator>
-	<navigator url="/pages/xp2p-multiplayers/demo?cfg1=ipc&cfg2=xntp&mode=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo IPC+XNTP 多播放器</navigator>
+  <navigator url="/pages/xp2p-demo-1vN/demo?mode=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-xntp</navigator>
+  <navigator url="/pages/xp2p-demo-1vN/demo?mode=tcp" hover-class="navigator-hover">跳转到 X-P2P Demo 1vN-tcp</navigator>
+  <navigator url="/pages/xp2p-multiplayers/demo?cfg1=ipc1&cfg2=xntp" hover-class="navigator-hover">跳转到 X-P2P Demo 多播放器 ipc1+xntp</navigator>
 </view>
 
