--- a/demo/miniprogram/components/iot-p2p-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player/player.wxml
@@ -126,6 +126,6 @@
   </view>
   <view class="component-section component-section-gap">
     <view class="component-section-title">Log<view style="float: right; padding-right: 10rpx; color: blue;" bindtap="clearLog">clear</view></view>
-    <scroll-view scroll-y="true" style="height: 500rpx; padding: 10rpx; border: solid 1px #dddddd"><text>{{log}}</text></scroll-view>
+    <scroll-view scroll-y="true" style="height: 500rpx; padding: 10rpx; border: solid 1px #dddddd;"><text>{{log}}</text></scroll-view>
   </view>
 </view>
