--- a/demo/miniprogram/pages/xp2p-multiplayers/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-multiplayers/demo.wxml
@@ -1,25 +1,26 @@
 <view class="page-body">
   <view class="page-section page-section-gap">
-    <view class="group-button-area">
-      <button bindtap="resetP2P" class="group-button" type="primary" size="mini" disabled="{{!state}}">
-        resetP2P
-      </button>
-    </view>
-    <view bindtap="printData">moduleState: {{state}}</view>
-    <view>localPeername: {{localPeername}}</view>
+    <iot-p2p-control
+      id="{{controlId}}"
+      bind:statechange="onP2PModuleStateChange"
+      bind:beforeResetP2P="stopAllPlayers"
+      bind:beforeDestroyP2P="stopAllPlayers"
+    />
   </view>
   <view class="page-section" wx:if="{{cfg1}}">
     <view class="page-section-title player-title">player1: {{playerId1}}</view>
     <iot-p2p-player
       id="{{playerId1}}"
       cfg="{{cfg1}}" 
-      onlyp2p="{{onlyp2p}}" />
+      onlyp2p="{{onlyp2p}}"
+    />
   </view>
   <view class="page-section" wx:if="{{cfg2}}">
     <view class="page-section-title player-title">player2: {{playerId2}}</view>
     <iot-p2p-player
       id="{{playerId2}}"
       cfg="{{cfg2}}" 
-      onlyp2p="{{onlyp2p}}" />
+      onlyp2p="{{onlyp2p}}"
+    />
   </view>
 </view>
