--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
@@ -1,12 +1,11 @@
 <view class="page-body">
   <view class="page-section page-section-gap">
-    <view class="group-button-area">
-      <button bindtap="resetP2P" class="group-button" type="primary" size="mini" disabled="{{!state}}">
-        resetP2P
-      </button>
-    </view>
-    <view bindtap="printData">moduleState: {{state}}</view>
-    <view>localPeername: {{localPeername}}</view>
+    <iot-p2p-control
+      id="{{controlId}}"
+      bind:statechange="onP2PModuleStateChange"
+      bind:beforeResetP2P="stopAllPlayers"
+      bind:beforeDestroyP2P="stopAllPlayers"
+    />
   </view>
   <view class="page-section" wx:if="{{cfg}}">
     <view class="page-section-title">player: {{playerId}}</view>
@@ -15,7 +14,7 @@
       cfg="{{cfg}}" 
       onlyp2p="{{onlyp2p}}"
       reserve="{{reserve}}"
-      bind:p2pNotify="onP2PMessage_Notify"
+      bind:p2pDisconnect="onP2PDisconnect"
       bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
     />
   </view>
