--- a/demo/miniprogram/pages/xp2p-multiplayers/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-multiplayers/demo.wxml
@@ -1,18 +1,13 @@
 <view class="page-body">
-  <view class="page-section page-section-gap">
-    <iot-p2p-control
-      id="{{controlId}}"
-      bind:statechange="onP2PModuleStateChange"
-      bind:beforeResetP2P="stopAllPlayers"
-      bind:beforeDestroyP2P="stopAllPlayers"
-    />
-  </view>
   <view class="page-section" wx:if="{{cfg1}}">
     <view class="page-section-title player-title">player1: {{playerId1}}</view>
     <iot-p2p-player
       id="{{playerId1}}"
       cfg="{{cfg1}}" 
       onlyp2p="{{onlyp2p}}"
+      bind:p2pDisconnect="onP2PDisconnect"
+      bind:localServerError="onPlayerLocalServerError"
+      bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
     />
   </view>
   <view class="page-section" wx:if="{{cfg2}}">
@@ -21,6 +16,9 @@
       id="{{playerId2}}"
       cfg="{{cfg2}}" 
       onlyp2p="{{onlyp2p}}"
+      bind:p2pDisconnect="onP2PDisconnect"
+      bind:localServerError="onPlayerLocalServerError"
+      bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
     />
   </view>
 </view>
