--- a/demo/miniprogram/components/iot-p2p-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player/player.wxml
@@ -1,71 +1,102 @@
 <view class="component">
   <view wx:if="{{needPlayer}}" class="component-section tc">
-    <p2p-player 
-      id="{{playerId}}"
-      mode="live"
-      minCache="0.2"
-      maxCache="0.8"
-      bind:playerReady="onPlayerReady"
-      bind:playerStartPull="onPlayerStartPull"
-      bind:playerClose="onPlayerClose"
-      bind:playerError="onPlayerError"
-      bind:error="onLivePlayerError"
-      bind:statechange="onLivePlayerStateChange"
-      bind:netstatus="onLivePlayerNetStatusChange"
-    />
+    <view class="player-container">
+      <p2p-player
+        wx:if="{{hasPlayer}}"
+        id="{{playerId}}"
+        mode="live"
+        minCache="0.2"
+        maxCache="0.8"
+        bind:playerReady="onPlayerReady"
+        bind:playerStartPull="onPlayerStartPull"
+        bind:playerClose="onPlayerClose"
+        bind:playerError="onPlayerError"
+        bind:error="onLivePlayerError"
+        bind:statechange="onLivePlayerStateChange"
+        bind:netstatus="onLivePlayerNetStatusChange"
+      />
+      <view class="player-message">{{playerMsg}}</view>
+    </view>
     <view>playState: {{state}}</view>
   </view>
   <view class="component-section">
     <view class="component-section-title">模式: {{mode}}</view>
-    <!--
-    <view>targetId:</view>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <input class="weui-input" type="text" value="{{inputTargetId}}" placeholder="请输入targetId" placeholder-class="placeholder" bindinput="inputP2PTargetId" />
+    <view class="control-info">
+      <!--
+      <view>targetId:</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <input class="weui-input" type="text" value="{{inputTargetId}}" placeholder="请输入targetId" placeholder-class="placeholder" bindinput="inputP2PTargetId" />
+        </view>
+      </view>
+      -->
+      <view wx:if="{{mode==='ipc'}}" class="info-inputs {{showPTZPanel ? 'hidden' : ''}}">
+        <view>productId:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputProductId}}" disabled="{{targetId}}" placeholder="请输入productId" placeholder-class="placeholder" bindinput="inputIPCProductId" />
+          </view>
+        </view>
+        <view>deviceName:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputDeviceName}}" disabled="{{targetId}}" placeholder="请输入deviceName" placeholder-class="placeholder" bindinput="inputIPCDeviceName" />
+          </view>
+        </view>
+        <view>xp2pInfo:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputXp2pInfo}}" disabled="{{targetId}}" placeholder="请输入xp2pInfo" placeholder-class="placeholder" bindinput="inputIPCXp2pInfo" />
+          </view>
+        </view>
+        <view>flvFile:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputFlvFile}}" disabled="{{targetId && playing}}" placeholder="请输入flvFile" placeholder-class="placeholder" bindinput="inputIPCFlvFile" />
+          </view>
+        </view>
+      </view>
+      <view wx:if="{{mode!=='ipc'}}" class="info-inputs {{showPTZPanel ? 'hidden' : ''}}">
+        <view>codeUrl:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputCodeUrl}}" disabled="{{targetId}}" placeholder="请输入codeUrl" placeholder-class="placeholder" bindinput="inputServerCodeUrl" />
+          </view>
+        </view>
+        <view>streamUrl:</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <input class="weui-input" type="text" value="{{inputUrl}}" disabled="{{targetId}}" placeholder="请输入streamUrl" placeholder-class="placeholder" bindinput="inputStreamUrl" />
+          </view>
+        </view>
+      </view>
+      <view wx:if="{{mode==='ipc'}}" class="ptz-panel-wrap {{showPTZPanel ? '' : 'hide'}}">
+        <view class="ptz-panel">
+          <view class="ptz-controls">
+            <view class="ptz-controls-top">
+              <view class="ptz-position">
+                <view wx:for="{{ptzBtns}}" wx:key="name" class="ptz-dir ptz-{{item.name}}">
+                  <view class="ptz-btn"
+                    data-cmd="{{item.cmd}}"
+                    bind:touchstart="controlDevicePTZ"
+                    bind:touchend="releasePTZBtn"
+                    bind:touchcancel="releasePTZBtn"
+                  >
+                    <view class="ptz-icon arrow-{{item.name}} {{ptzCmd === item.cmd ? 'press' : ''}}"></view>
+                  </view>
+                </view>
+                <view class="ptz-cricle">
+                  <view class="voice-btn" bindtap="toggleVoice" data-recorder-cfg="1-8000-16000">
+                    <view class="voice-icon {{voiceState === 'sending' ? 'press' : ''}}">{{voiceState}}</view>
+                  </view>
+                </view>
+              </view>
+            </view>
+          </view>
+        </view>
       </view>
     </view>
-    -->
-    <view wx:if="{{mode==='ipc'}}">
-      <view>productId:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputProductId}}" disabled="{{targetId}}" placeholder="请输入productId" placeholder-class="placeholder" bindinput="inputIPCProductId" />
-        </view>
-      </view>
-      <view>deviceName:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputDeviceName}}" disabled="{{targetId}}" placeholder="请输入deviceName" placeholder-class="placeholder" bindinput="inputIPCDeviceName" />
-        </view>
-      </view>
-      <view>xp2pInfo:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputXp2pInfo}}" disabled="{{targetId}}" placeholder="请输入xp2pInfo" placeholder-class="placeholder" bindinput="inputIPCXp2pInfo" />
-        </view>
-      </view>
-      <view>flvFile:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputFlvFile}}" disabled="{{targetId && playing}}" placeholder="请输入flvFile" placeholder-class="placeholder" bindinput="inputIPCFlvFile" />
-        </view>
-      </view>
-    </view>
-    <view  wx:if="{{mode!=='ipc'}}">
-      <view>codeUrl:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputCodeUrl}}" disabled="{{targetId}}" placeholder="请输入codeUrl" placeholder-class="placeholder" bindinput="inputServerCodeUrl" />
-        </view>
-      </view>
-      <view>streamUrl:</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="text" value="{{inputUrl}}" disabled="{{targetId}}" placeholder="请输入streamUrl" placeholder-class="placeholder" bindinput="inputStreamUrl" />
-        </view>
-      </view>
-    </view>
-    <view bindtap="printData" >playState: {{state}}</view>
+    <view>playState: {{state}}</view>
     <view>totalBytes: {{totalBytes}}</view>
     <view class="group-button-area">
       <button wx:if="{{mode === 'ipc'}}" bindtap="prepare" class="group-button" type="primary" size="mini" disabled="{{!!targetId}}">
@@ -79,6 +110,11 @@
       </button>
       <button bindtap="stopAll" class="group-button" type="primary" size="mini" disabled="{{!targetId}}">
         stopAll
+      </button>
+    </view>
+    <view wx:if="{{mode==='ipc'}}">
+      <button bindtap="togglePTZPanel" type="primary" size="mini" disabled="{{!targetId}}">
+        打开/关闭PTZ面板
       </button>
     </view>
   </view>
