--- a/demo/miniprogram/components/iot-p2p-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-player/player.wxss
@@ -1,3 +1,5 @@
+@import './ptz-panel.wxss';
+
 .component-section {
   margin-bottom: 20rpx;
 }
@@ -7,6 +9,26 @@
 .component-section-title {
   padding-bottom: 10rpx;
   font-size: 18px;
+}
+
+.player-container {
+  position: relative;
+  width: 100%;
+  height: 420rpx;
+  background-color: black;
+}
+.player-container .player-message {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding-top: 200rpx;
+  text-align: center;
+  color: white;
+}
+.player-container live-player {
+  width: 100%  !important;
+  height: 100%  !important;
 }
 
 .group-button-area {
@@ -87,4 +109,23 @@
 }
 .text-break {
   word-break: break-all;
+}
+
+.control-info {
+  position: relative;
+}
+
+.info-inputs.hidden {
+  visibility: hidden;
+}
+
+.ptz-panel-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+}
+.ptz-panel-wrap.hide {
+  display: none;
 }
