--- a/demo/miniprogram/pages/index/index.wxml
+++ b/demo/miniprogram/pages/index/index.wxml
@@ -21,8 +21,8 @@
       </navigator>
     </view>
   </view>
-  <navigator url="/pages/xp2p-singleplayer/demo?cfg=tcptest" hover-class="navigator-hover">跳转到 X-P2P 单播放器 tcptest</navigator>
-  <navigator url="/pages/xp2p-singleplayer/demo?cfg=judy1" hover-class="navigator-hover">跳转到 X-P2P 单播放器 judy1</navigator>
-  <navigator url="/pages/xp2p-multiplayers/demo?cfg1=tcptest&cfg2=judy1" hover-class="navigator-hover">跳转到 X-P2P 多播放器 tcptest+judy1</navigator>
+  <navigator wx:if="{{firstServerStream}}" url="/pages/xp2p-singleplayer/demo?cfg={{firstServerStream.cfg}}" hover-class="navigator-hover">跳转到 X-P2P 单播放器 {{firstServerStream.cfg}}</navigator>
+  <navigator wx:if="{{firstIPCStream}}" url="/pages/xp2p-singleplayer/demo?cfg={{firstIPCStream.cfg}}" hover-class="navigator-hover">跳转到 X-P2P 单播放器 {{firstIPCStream.cfg}}</navigator>
+  <navigator wx:if="{{firstServerStream && firstIPCStream}}" url="/pages/xp2p-multiplayers/demo?cfg1={{firstServerStream.cfg}}&cfg2={{firstIPCStream.cfg}}" hover-class="navigator-hover">跳转到 X-P2P 多播放器 {{firstServerStream.cfg}}+{{firstIPCStream.cfg}}</navigator>
 </view>
 
